FUFB-127 / FUFB-208 / FUFB-208 QA remediation for Image with Text Alternate section as a Timeline. Fixed buttons to use arrows and spacing correctly.

--- a/sites/_shared/assets/section-image-with-text-alternate.css
+++ b/sites/_shared/assets/section-image-with-text-alternate.css
@@ -213,6 +213,13 @@
   height: auto;
 }
 
+.image-with-text-alternate__content .button.button--link-1,
+.image-with-text-alternate__content .button.button--link-1-dark,
+.image-with-text-alternate__content .button.button--link-2,
+.image-with-text-alternate__content .button.button--link-2-dark {
+  justify-content: flex-start;
+}
+
 .image-with-text-alternate__box > * + .image-with-text-alternate__text {
   margin-top: 0.5rem;
 }
@@ -285,6 +292,19 @@
 .image-with-text-alternate__button-wrapper.side-by-side .image-with-text-alternate__button-separator {
   margin: 0 2rem;
 }
+
+@media screen and (min-width: 750px) {
+  .image-with-text-alternate__button-wrapper .image-with-text-alternate__button + .image-with-text-alternate__button {
+    margin: 2rem 0 0 0;
+  }
+}
+
+@media screen and (max-width: 989px) {
+  .image-with-text-alternate__button-wrapper.side-by-side .image-with-text-alternate__button + .image-with-text-alternate__button {
+    margin: 2rem 0 0 0;
+  }
+}
+
 
 @media screen and (max-width: 959px) {
   .image-with-text-alternate__box {
